# napcat-rs

./: .gitignore  Cargo.toml  kovi.plugin.toml  readme.md
plugins/chat_message/: Cargo.toml
plugins/chat_message/src/: config.rs  lib.rs  ml.rs  tools.rs
plugins/chat_message/src/command_exec/: app.rs  cmds.rs  common.rs  mod.rs  shell.rs
plugins/chat_message/src/handlers/: group_chat.rs  mod.rs  tool.rs
plugins/kovi-plugin-bot-check/: Cargo.toml
plugins/kovi-plugin-bot-check/src/: config.rs  data.rs  dynconfig.rs  handle.rs  lib.rs
plugins/kovi-plugin-command-exec/: Cargo.toml
plugins/kovi-plugin-command-exec/src/: app.rs  config.rs  lib.rs
plugins/kovi-plugin-command_exec/: Cargo.toml
plugins/kovi-plugin-command_exec/src/: app.rs  config.rs
plugins/kovi-plugin-dev-uitls/: Cargo.toml
plugins/kovi-plugin-dev-utils/: Cargo.toml
plugins/kovi-plugin-dev-utils/src/: configinit.rs  infodwd.rs  infoev.rs  lib.rs
plugins/kovi-plugin-dev-utils/src/config/: macro.rs  mod.rs
plugins/kovi-plugin-emoji-attack/: Cargo.toml
plugins/kovi-plugin-emoji-attack/src/: app.rs  config.rs  data.rs  handle.rs  lib.rs
plugins/kovi-plugin-javascript-shell/: Cargo.toml
plugins/kovi-plugin-javascript-shell/src/: lib.rs  shell.rs
src/: main.rs
