[package]
name = "nya-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chat_message = { version = "0.1.0", path = "plugins/chat_message" }
kovi = "=0.11.10"
kovi-plugin-check-alllong = { git = "https://github.com/kovi-plugins/check-all-long.git", version = "0.1.0" }
kovi-plugin-command-exec = { version = "0.1.0", path = "plugins/kovi-plugin-command-exec" }
kovi-plugin-dev-utils = { version = "0.1.0", path = "plugins/kovi-plugin-dev-utils" }

[workspace]
members = ["plugins/chat_message", "plugins/kovi-plugin-command-exec", "plugins/kovi-plugin-dev-utils"]

[workspace.dependencies]
kovi = "=0.11.10"
