[package]
name = "kovi-plugin-emoji-attack"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
kovi-plugin-command-exec = { path = "../kovi-plugin-command-exec" }
kovi-plugin-dev-utils = { path = "../kovi-plugin-dev-utils" }
kovi-plugin-expand-napcat = "0.4.0"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
